--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="js/test.js"></script>
 </head>
 <body onload="testThis();">
-    
+    <h1>
+        My Website</h1>
 </body>
 </html>
